--- a/dev/scss/_shadow.scss
+++ b/dev/scss/_shadow.scss
@@ -1,26 +1,25 @@
 @use "sass:map";
 @use "sass:color";
-@use 'variables';
-@use 'prototypes';
+@use "variables";
+@use "prototypes";
 
 @for $i from 1 through 10 {
-
     .shadow-#{$i} {
         box-shadow: gray 0px 0px ($i + 2px) 0px;
     }
-    
+
     .shadow-up-#{$i} {
         box-shadow: gray 0px -#{$i}px ($i + 2px) 0px;
     }
-    
+
     .shadow-down-#{$i} {
         box-shadow: gray 0px #{$i}px ($i + 2px) 0px;
     }
-    
+
     .shadow-right-#{$i} {
         box-shadow: gray #{$i}px 0px ($i + 2px) 0px;
     }
-    
+
     .shadow-left-#{$i} {
         box-shadow: gray -#{$i}px 0px ($i + 2px) 0px;
     }
@@ -28,19 +27,19 @@
     .shadow-inset-#{$i} {
         box-shadow: gray 0px 0px ($i + 2px) 0px inset;
     }
-    
+
     .shadow-inset-up-#{$i} {
         box-shadow: gray 0px -#{$i}px ($i + 2px) 0px inset;
     }
-    
+
     .shadow-inset-down-#{$i} {
         box-shadow: gray 0px #{$i}px ($i + 2px) 0px inset;
     }
-    
+
     .shadow-inset-right-#{$i} {
         box-shadow: gray #{$i}px 0px ($i + 2px) 0px inset;
     }
-    
+
     .shadow-inset-left-#{$i} {
         box-shadow: gray -#{$i}px 0px ($i + 2px) 0px inset;
     }
@@ -51,39 +50,39 @@
         .shadow-#{$i}.#{$name} {
             box-shadow: $colour 0px 0px ($i + 2px) 0px;
         }
-        
+
         .shadow-up-#{$i}.#{$name} {
             box-shadow: $colour 0px -#{$i}px ($i + 2px) 0px;
         }
-        
+
         .shadow-down-#{$i}.#{$name} {
             box-shadow: $colour 0px #{$i}px ($i + 2px) 0px;
         }
-        
+
         .shadow-right-#{$i}.#{$name} {
             box-shadow: $colour #{$i}px 0px ($i + 2px) 0px;
         }
-        
+
         .shadow-left-#{$i}.#{$name} {
             box-shadow: $colour -#{$i}px 0px ($i + 2px) 0px;
         }
-    
+
         .shadow-inset-#{$i}.#{$name} {
             box-shadow: $colour 0px 0px ($i + 2px) 0px inset;
         }
-        
+
         .shadow-inset-up-#{$i}.#{$name} {
             box-shadow: $colour 0px -#{$i}px ($i + 2px) 0px inset;
         }
-        
+
         .shadow-inset-down-#{$i}.#{$name} {
             box-shadow: $colour 0px #{$i}px ($i + 2px) 0px inset;
         }
-        
+
         .shadow-inset-right-#{$i}.#{$name} {
             box-shadow: $colour #{$i}px 0px ($i + 2px) 0px inset;
         }
-        
+
         .shadow-inset-left-#{$i}.#{$name} {
             box-shadow: $colour -#{$i}px 0px ($i + 2px) 0px inset;
         }
