--- a/dev/scss/_text.scss
+++ b/dev/scss/_text.scss
@@ -1,9 +1,38 @@
 @use "sass:map";
 @use "sass:color";
-@use 'variables';
-@use 'prototypes';
+@use "variables";
+@use "prototypes";
 
-%common-text, p, span, a, select, option, label, input, textarea, button, .p, .text, .a, .link, body, div, main, nav, h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+%common-text,
+p,
+span,
+a,
+select,
+option,
+label,
+input,
+textarea,
+button,
+.p,
+.text,
+.a,
+.link,
+body,
+div,
+main,
+nav,
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
     font-family: variables.$fonts;
     margin-top: variables.$s-offset;
     margin-bottom: variables.$s-offset;
@@ -11,7 +40,12 @@
     font-weight: normal;
 }
 
-@mixin text($size: variables.$font-size, $margin: variables.$s-offset, $padding: 0px, $weight: normal) {
+@mixin text(
+    $size: variables.$font-size,
+    $margin: variables.$s-offset,
+    $padding: 0px,
+    $weight: normal
+) {
     font-size: $size;
     @if ($margin != variables.$s-offset) {
         margin-top: $margin;
@@ -26,47 +60,95 @@
 }
 
 @mixin text-levels($scalar) {
-
-    p, span, a, select, option, label, input, textarea, button, .p, .text, .a, .link {
+    p,
+    span,
+    a,
+    select,
+    option,
+    label,
+    input,
+    textarea,
+    button,
+    .p,
+    .text,
+    .a,
+    .link {
         @include text(variables.$font-size * $scalar);
-    } 
+    }
 
-    body, div, main, nav {
+    body,
+    div,
+    main,
+    nav {
         @include text(variables.$font-size * $scalar, 0px);
-    } 
+    }
 
-    h1, .h1 {
+    h1,
+    .h1 {
         @include text(variables.$h1-size * $scalar);
     }
-    
-    h2, .h2 {
+
+    h2,
+    .h2 {
         @include text(variables.$h2-size * $scalar);
     }
-    
-    h3, .h3 {
+
+    h3,
+    .h3 {
         @include text(variables.$h3-size * $scalar);
     }
-    
-    h4, .h4 {
+
+    h4,
+    .h4 {
         @include text(variables.$h4-size * $scalar);
     }
 
-    h5, .h5 {
+    h5,
+    .h5 {
         @include text(variables.$h5-size * $scalar);
     }
 
-    h6, .h6 {
+    h6,
+    .h6 {
         @include text(variables.$h6-size * $scalar);
     }
 
     @each $name, $theme in variables.$themes {
         $text: map.get($theme, "text-colour");
 
-        h1, h2, h3, h4, h5, h6, p, span, a, select, option, label, input, textarea, button, body, div, main, nav, .h1, .h2, .h3, .h4, .h5, .h6, .p, .text, .a, .link {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        p,
+        span,
+        a,
+        select,
+        option,
+        label,
+        input,
+        textarea,
+        button,
+        body,
+        div,
+        main,
+        nav,
+        .h1,
+        .h2,
+        .h3,
+        .h4,
+        .h5,
+        .h6,
+        .p,
+        .text,
+        .a,
+        .link {
             &.#{$name} {
                 color: $text;
             }
-        } 
+        }
     }
 }
 
