--- a/dev/scss/_z-index.scss
+++ b/dev/scss/_z-index.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @use "sass:color";
-@use 'variables';
-@use 'prototypes';
+@use "variables";
+@use "prototypes";
 
 @for $i from -1 through 10 {
     .z-#{$i} {
