--- a/dev/scss/elements/_images.scss
+++ b/dev/scss/elements/_images.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @use "sass:color";
-@use '../variables';
-@use '../prototypes';
+@use "../variables";
+@use "../prototypes";
 
 .image {
     @extend %box;
@@ -43,7 +43,12 @@
 }
 
 .icon {
-    @include prototypes.icon(map.get(map.get(map.get(variables.$themes, "light"), "colours"), "primary"));
+    @include prototypes.icon(
+        map.get(
+            map.get(map.get(variables.$themes, "light"), "colours"),
+            "primary"
+        )
+    );
     min-width: 2.5em;
     min-height: 2.5em;
 }
