--- a/dev/scss/elements/_links.scss
+++ b/dev/scss/elements/_links.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @use "sass:color";
-@use '../variables';
-@use '../prototypes';
+@use "../variables";
+@use "../prototypes";
 
 .link-row {
     @include prototypes.flex-row(center, center);
@@ -21,7 +21,12 @@
 }
 
 .link {
-    @include prototypes.link(map.get(map.get(map.get(variables.$themes, "light"), "colours"), "primary"));
+    @include prototypes.link(
+        map.get(
+            map.get(map.get(variables.$themes, "light"), "colours"),
+            "primary"
+        )
+    );
 }
 
 @each $name, $theme in variables.$themes {
