--- a/dev/scss/elements/_popup.scss
+++ b/dev/scss/elements/_popup.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @use "sass:color";
-@use '../variables';
-@use '../prototypes';
+@use "../variables";
+@use "../prototypes";
 
 .popup {
     @extend %box;
