--- a/dev/scss/_offsets.scss
+++ b/dev/scss/_offsets.scss
@@ -105,7 +105,7 @@
             $start: -10;
         }
 
-        //Generate offsets of fixed em value amounts.
+        //Generate offsets of fixed em value amounts
         @for $i from $start through 10 {
             @each $direction-key, $direction in variables.$offset-directions {
                 .#{$type}-#{$direction}-#{$i},
